--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 		<video id="player" onclick="toggle()"></video>
 		<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 		<script src="js/app.js"></script>
+		<script src="js/m3u8parser.js"></script>
 	</body>
 </html>
