--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Wildflower</title>
 		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body>
+	<body id="body">
 		<div id="load" class="overlay" style="display:block;">
 			<div class="innerOverlay">
 				<div class="spinner">
@@ -11,7 +11,22 @@
 					<div class="bounce2"></div>
 					<div class="bounce3"></div>
 				</div>
+				<p id="l"></p>
 			</div>
+		</div>
+		<div id="start" class="overlay" style="display:none;">
+			<div class="innerOverlay">
+				<h2>Welcome to Wildflower.</h2>
+				<p>
+					This website is to stream m3u8s nice and neatly in the web!<br>
+					No content on this site is hosted here.
+				</p>
+				<button onclick="parse('https://iptv-org.github.io/iptv/countries/us.m3u')">Get Started!</button>
+			</div>
+		</div>
+		<div class="sidebar" id="s">
+			<h2>Streams</h2>
+			<div id="streamContainer"></div>
 		</div>
 		<video id="player" onclick="toggle()"></video>
 		<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
