bug fix, README link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					This website is to stream m3u8s nice and neatly in the web!<br>
 					No content on this site is hosted here.
 				</p>
-				<button onclick="parse('https://iptv-org.github.io/iptv/countries/us.m3u')">Get Started!</button>
+				<button onclick="parse('https://pastebin.com/raw/1dyy4yw2')">Get Started!</button>
 			</div>
 		</div>
 		<div id="error" class="overlay">
